--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for Antinium
 
+1.3.1 - Valid beds should now be recognized by the sleep accelerator
+
+
 1.0.6.0 - Wounds and bionics should now be at the correct place
 
 
