--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for Antinium
 
+1.4.3 - Fixed the hatching of the royal egg
+
+
 1.4.2 - Fixed gene-restrictions to not affect visuals, thanks to Razar on the HAR-discord
 
 
